--- a/workstation-ostree-installer/lorax-configure-repo.tmpl
+++ b/workstation-ostree-installer/lorax-configure-repo.tmpl
@@ -4,5 +4,5 @@
 <%page args="ostree_osname, ostree_ref"/>
 append usr/share/anaconda/interactive-defaults.ks "ostreesetup --nogpg --osname=${ostree_osname} --remote=${ostree_osname} --url=file:////run/install/repo/content/repo --ref=${ostree_ref}\n"
 append usr/share/anaconda/interactive-defaults.ks "services --disabled cloud-init,cloud-config,cloud-final,cloud-init-local\n"
-append usr/share/anaconda/interactive-defaults.ks "%post --erroronfail\nrm -f /etc/ostree/remotes.d/${ostree_osname}.conf\nostree remote add --set=gpg-verify=false fedora-atomic 'https://kojipkgs.fedoraproject.org/compose/ostree/rawhide/'\n%end\n"
+append usr/share/anaconda/interactive-defaults.ks "%post --erroronfail\nrm -f /etc/ostree/remotes.d/${ostree_osname}.conf\nostree remote add --set=gpg-verify=false ${ostree_osname} 'https://kojipkgs.fedoraproject.org/compose/ostree/rawhide/'\n%end\n"
 
