--- a/atomic-installer/lorax-embed-repo.tmpl
+++ b/atomic-installer/lorax-embed-repo.tmpl
@@ -4,8 +4,8 @@
 ## Note that we pull with depth=0 to only get *one* commit into the
 ## ISO, because we obviously don't want the full history.
 
-<%page args="workdir, ostree_osname, ostree_repo, ostree_ref"/>
-runcmd mkdir -p ${workdir}/iso-graft/content/repo
-runcmd ostree --repo=${workdir}/iso-graft/content/repo init --mode=archive-z2
-runcmd ostree --repo=${workdir}/iso-graft/content/repo remote add ostree-mirror --set=gpg-verify=false ${ostree_repo}
-runcmd ostree --repo=${workdir}/iso-graft/content/repo pull --mirror ostree-mirror ${ostree_ref}
+<%page args="root, ostree_osname, ostree_repo, ostree_ref"/>
+mkdir ostree
+runcmd ostree --repo=${root}/ostree/repo init --mode=bare
+runcmd ostree --repo=${root}/ostree/repo remote add ostree-mirror --set=gpg-verify=false ${ostree_repo}
+runcmd ostree --repo=${root}/ostree/repo pull --mirror ostree-mirror ${ostree_ref}
