atomic: set up for 2wk updates
This is inspired by 286c199 from the f25 branch. Basically we need
to be able to pull from one ref [1] at the time we create the ISO, but
configure it so that after an install using the ISO the user has an
install that is configured to pull from another ref [2].

This is how we do it in the branched composes (i.e. f25/f26). Even
though rawhide doesn't follow this updates/stable ref model it makes
sense for us to set up the templates like this for consistency. The
actual values passed in for ostree_install_ref and ostree_update_ref
can be the same.

[1] fedora/26/x86_64/updates/atomic-host
[2] fedora/26/x86_64/atomic-host

Signed-off-by: Dusty Mabe <dusty@dustymabe.com>

--- a/atomic-installer/lorax-configure-repo.tmpl
+++ b/atomic-installer/lorax-configure-repo.tmpl
@@ -4,8 +4,8 @@
 ##     but the package enables itself by default
 ##  3) Work around https://bugzilla.redhat.com/show_bug.cgi?id=1193590
 
-<%page args="ostree_repo, ostree_osname, ostree_ref"/>
-append usr/share/anaconda/interactive-defaults.ks "ostreesetup --nogpg --osname=${ostree_osname} --remote=${ostree_osname} --url=file:///ostree/repo --ref=${ostree_ref}\n"
+<%page args="ostree_osname, ostree_repo, ostree_install_ref, ostree_update_ref"/>
+append usr/share/anaconda/interactive-defaults.ks "ostreesetup --nogpg --osname=${ostree_osname} --remote=${ostree_osname} --url=file:///ostree/repo --ref=${ostree_update_ref}\n"
 append usr/share/anaconda/interactive-defaults.ks "services --disabled cloud-init,cloud-config,cloud-final,cloud-init-local\n"
 append usr/share/anaconda/interactive-defaults.ks "%post --erroronfail\nrm -f /etc/ostree/remotes.d/${ostree_osname}.conf\nostree remote add --set=gpg-verify=false ${ostree_osname} '${ostree_repo}'\ncp /etc/skel/.bash* /root\n%end\n"
 
