--- a/atomic-installer/lorax-configure-repo.tmpl
+++ b/atomic-installer/lorax-configure-repo.tmpl
@@ -4,6 +4,12 @@
 ##     but the package enables itself by default
 ##  3) Work around https://bugzilla.redhat.com/show_bug.cgi?id=1193590
 
+## Args:
+##  - ostree_osname      - the name of the os/name of remote
+##  - ostree_repo        - the url of the remote
+##  - ostree_install_ref - the ref to use when creating the ISO  
+##  - ostree_update_ref  - the ref to use for updates of an installed system
+
 <%page args="ostree_osname, ostree_repo, ostree_install_ref, ostree_update_ref"/>
 append usr/share/anaconda/interactive-defaults.ks "ostreesetup --nogpg --osname=${ostree_osname} --remote=${ostree_osname} --url=file:///ostree/repo --ref=${ostree_update_ref}\n"
 append usr/share/anaconda/interactive-defaults.ks "services --disabled cloud-init,cloud-config,cloud-final,cloud-init-local\n"
