--- a/atomic-installer/lorax-embed-repo.tmpl
+++ b/atomic-installer/lorax-embed-repo.tmpl
@@ -4,6 +4,13 @@
 ## Note that we pull with depth=0 to only get *one* commit into the
 ## ISO, because we obviously don't want the full history.
 
+## Args:
+##  - root               - the root directory of the iso tree
+##  - ostree_osname      - the name of the os/name of remote
+##  - ostree_repo        - the url of the remote
+##  - ostree_install_ref - the ref to use when creating the ISO  
+##  - ostree_update_ref  - the ref to use for updates of an installed system
+
 <%page args="root, ostree_osname, ostree_repo, ostree_install_ref, ostree_update_ref"/>
 runcmd mkdir ${root}/ostree
 runcmd ostree --repo=${root}/ostree/repo init --mode=bare
