atomic: only create new ref if needed
If ostree_install_ref and ostree_update_ref are the same, as is the
case for rawhide, then there is no reason to create a new ref. This
is actually causing failures in rawhide right now.

Having this setup will allow us to have the same configs in rawhide
and branched where we do need separate install/update ref.

Signed-off-by: Dusty Mabe <dusty@dustymabe.com>

--- a/atomic-installer/lorax-embed-repo.tmpl
+++ b/atomic-installer/lorax-embed-repo.tmpl
@@ -16,5 +16,5 @@ runcmd mkdir ${root}/ostree
 runcmd ostree --repo=${root}/ostree/repo init --mode=bare
 runcmd ostree --repo=${root}/ostree/repo remote add ${ostree_osname} --set=gpg-verify=false ${ostree_repo}
 runcmd ostree --repo=${root}/ostree/repo pull --mirror ${ostree_osname} ${ostree_install_ref}
-runcmd ostree --repo=${root}/ostree/repo refs ${ostree_install_ref} --create ${ostree_update_ref}
+runcmd bash -c 'if [ "${ostree_install_ref}" != "${ostree_update_ref}" ]; then ostree --repo=${root}/ostree/repo refs ${ostree_install_ref} --create ${ostree_update_ref}; fi'
 runcmd ostree --repo=${root}/ostree/repo summary -u
