Set contenturl in ostree remote config
Related: https://pagure.io/fedora-infrastructure/issue/7487#comment-551542

Signed-off-by: Sinny Kumari <sinny@redhat.com>

--- a/ostree-based-installer/lorax-configure-repo.tmpl
+++ b/ostree-based-installer/lorax-configure-repo.tmpl
@@ -9,6 +9,7 @@
 ##  - ostree_update_repo - the url of the remote for updates of an installed system
 ##  - ostree_install_ref - the ref to use when creating the ISO  
 ##  - ostree_update_ref  - the ref to use for updates of an installed system
+##  - ostree_contenturl    - the url to use for fetching content from mirrors/CDN
 
 <%page args="ostree_osname, ostree_install_repo, ostree_update_repo, ostree_install_ref, ostree_update_ref, ostree_oskey"/>
 append usr/share/anaconda/interactive-defaults.ks "ostreesetup --nogpg --osname=${ostree_osname} --remote=${ostree_osname} --url=file:///ostree/repo --ref=${ostree_update_ref}"
@@ -16,7 +17,7 @@ append usr/share/anaconda/interactive-defaults.ks "firewall --use-system-default
 
 append usr/share/anaconda/interactive-defaults.ks "%post --erroronfail"
 append usr/share/anaconda/interactive-defaults.ks "rm -f /etc/ostree/remotes.d/${ostree_osname}.conf"
-append usr/share/anaconda/interactive-defaults.ks "ostree remote add --set=gpg-verify=true --set=gpgkeypath=/etc/pki/rpm-gpg/RPM-GPG-KEY-${ostree_oskey} ${ostree_osname} '${ostree_update_repo}'"
+append usr/share/anaconda/interactive-defaults.ks "ostree remote add --set=gpg-verify=true --set=gpgkeypath=/etc/pki/rpm-gpg/RPM-GPG-KEY-${ostree_oskey} --set=contenturl=${ostree_contenturl} ${ostree_osname} '${ostree_update_repo}'"
 append usr/share/anaconda/interactive-defaults.ks "cp /etc/skel/.bash* /root"
 append usr/share/anaconda/interactive-defaults.ks "%end"
 
