--- a/ostree-based-installer/lorax-configure-repo.tmpl
+++ b/ostree-based-installer/lorax-configure-repo.tmpl
@@ -18,7 +18,7 @@ append usr/share/anaconda/interactive-defaults.ks "firewall --use-system-default
 append usr/share/anaconda/interactive-defaults.ks "%post --erroronfail"
 %if ostree_osname != "fedora":
     append usr/share/anaconda/interactive-defaults.ks "rm -f /etc/ostree/remotes.d/${ostree_osname}.conf"
-    append usr/share/anaconda/interactive-defaults.ks "ostree remote add --set=gpg-verify=true --set=gpgkeypath=/etc/pki/rpm-gpg/RPM-GPG-KEY-${ostree_oskey} --set=contenturl=${ostree_contenturl} ${ostree_osname} '${ostree_update_repo}'"
+    append usr/share/anaconda/interactive-defaults.ks "ostree remote add --set=gpg-verify=true --set=gpgkeypath=/etc/pki/rpm-gpg/ --set=contenturl=${ostree_contenturl} ${ostree_osname} '${ostree_update_repo}'"
 %endif
 append usr/share/anaconda/interactive-defaults.ks "cp /etc/skel/.bash* /root"
 append usr/share/anaconda/interactive-defaults.ks "%end"
