Suppress trigger execution when installing Flatpaks
We don't need to run triggers to update caches, etc, since we're
just installing Flatpaks to get an ostree that we copy to the
destination, and in some execution environments (like a koji
runroot), the bwrap call to run the trigger might fail, so
export an empty FLATPAK_TRIGGERSDIR.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/ostree-based-installer/lorax-embed-flatpaks.tmpl
+++ b/ostree-based-installer/lorax-embed-flatpaks.tmpl
@@ -10,6 +10,7 @@
 <%
 import os
 import re
+import tempfile
 from pylorax.executils import runcmd_output, setenv
 from pylorax.sysutils import joinpaths
 
@@ -20,6 +21,9 @@ refs=re.split(r"\s+", flatpak_remote_refs)
 flatpak_dir=joinpaths(os.path.dirname(root), "flatpak")
 setenv("FLATPAK_USER_DIR", flatpak_dir)
 flatpak_repo=joinpaths(flatpak_dir, "repo")
+# suppress executing triggers by using an empty directory
+triggers_dir = tempfile.mkdtemp(prefix='flatpak-triggers-')
+setenv("FLATPAK_TRIGGERSDIR", triggers_dir)
 %>
 
 runcmd flatpak config --user --set languages "*"
