--- a/ostree-based-installer/lorax-embed-flatpaks.tmpl
+++ b/ostree-based-installer/lorax-embed-flatpaks.tmpl
@@ -28,7 +28,9 @@ setenv("FLATPAK_TRIGGERSDIR", triggers_dir)
 
 runcmd flatpak config --user --set languages "*"
 runcmd flatpak remote-add --user ${flatpak_remote_name} ${flatpak_remote_url}
-runcmd flatpak install -y --user ${flatpak_remote_name} ${flatpak_remote_refs}
+%if len(refs) > 0
+    runcmd flatpak install -y --user ${flatpak_remote_name} ${flatpak_remote_refs}
+%endif
 runcmd mkdir -p ${root}/flatpak
 runcmd ostree init --repo=${dest_repo} --mode=archive-z2
 %for ref in refs:
