lorax-embed-flatpaks.tmpl: Run the flatpak-install under dbus-run-session
Recent versions of Flatpak unconditionally use the Flatpak OCI
authenticator for OCI remotes - even if they don't actually need
authentication. (This simplifies making Flatpak work with registries
that do need authentication, or at least a token.)

But for the OCI authenticator to work, we need a D-Bus session,
so use dbus-run-session to create a temporary one.

Signed-off-by: Owen W. Taylor <otaylor@fishsoup.net>

--- a/ostree-based-installer/lorax-embed-flatpaks.tmpl
+++ b/ostree-based-installer/lorax-embed-flatpaks.tmpl
@@ -29,7 +29,10 @@ setenv("FLATPAK_TRIGGERSDIR", triggers_dir)
 runcmd flatpak config --user --set languages "*"
 runcmd flatpak remote-add --user ${flatpak_remote_name} ${flatpak_remote_url}
 %if len(refs) > 0:
-    runcmd flatpak install -y --user ${flatpak_remote_name} ${flatpak_remote_refs}
+    # We have to run a DBus session here, because Flatpak wants to talk to
+    # flatpak-oci-authenticator for OCI remotes - even ones that don't require
+    # authentication
+    runcmd dbus-run-session flatpak install -y --user ${flatpak_remote_name} ${flatpak_remote_refs}
 %endif
 runcmd mkdir -p ${root}/flatpak
 runcmd ostree init --repo=${dest_repo} --mode=archive-z2
