--- a/ostree-based-installer/runcmd.tmpl
+++ b/ostree-based-installer/runcmd.tmpl
@@ -4,5 +4,5 @@
 ## Args:
 ##  - cmd_1               - command to be executed
 
-<%page args="cmd_1"/>
-runcmd ${cmd_1}
+<%page args="cmd"/>
+runcmd ${cmd}
